--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="icon" href="icon.jpg">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -17,6 +18,7 @@
       <span class="bub_five"></span>
       <span class="bub_six"></span>
       <span class="bub_seven"></span>
+      <span class="bub_eight"></span>
     </div>
     <div class="container">
       <form class="" action="#" name="forms">
